plugins {
    // Plugin that applies Google-Java-format to the Java files in the project.
    // https://github.com/sherter/google-java-format-gradle-plugin
    // id 'com.github.sherter.google-java-format' version '0.6'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

apply plugin: 'java'

ext {
    isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
    jsr308 = file(new File("..")).absolutePath
    cfPath = "${jsr308}/checker-framework"
    picoPath = "${jsr308}/immutability"
    compilerArgsForRunningCF = [
            // Keep in sync with checker-framework/build.gradle.
            "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
    ]
}

println '==================================='
println '            PICO Checker           '
println '==================================='
println ''
println '-------------------------------'
println 'Important Environment Variables'
println '-------------------------------'
println 'JSR308: ' + jsr308
println 'CF:     ' + cfPath
println 'picoPath:' + picoPath

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: "${cfPath}/checker/dist", include: "checker.jar")
    implementation fileTree(dir: "${cfPath}/checker/dist", include: "checker-qual.jar")
    implementation fileTree(dir: "${cfPath}/checker/dist", include: "checker-util.jar")
    implementation fileTree(dir: "${cfPath}/checker/dist", include: "javac.jar")
    implementation 'org.plumelib:plume-util:1.8.1'

    testImplementation 'junit:junit:4.13.2'
    testImplementation fileTree(dir: "${cfPath}/framework-test/build/libs", include: "framework-test-*.jar")
}

sourceSets {
    main {
        java {
            srcDirs = ["src/main/java"]
        }

        resources {
            srcDirs = ["src/main/java"]
            exclude "**/*.java"
        }
    }

    test {
        java {
            // TODO: we shouldn't need source level dependency on CFITest
            srcDirs = ["src/test/java"]
        }
    }
}

shadowJar {
    dependencies {
        exclude(dependency("junit:.*:.*"))
    }
    description 'Creates the "fat" immutability.jar in dist'
    destinationDirectory = file("${projectDir}/dist")
    archiveFileName = "immutability-pico.jar"
}

compileJava {
    options.compilerArgs = [
            '-implicit:class',
            '-Xlint:deprecation',
            '-Awarns',
            '-Xmaxwarns', '10000',
    ]
}

afterEvaluate {
    tasks.withType(JavaCompile) { compilationTask ->
        sourceCompatibility = 8
        targetCompatibility = 8
    }
    // Create a task for each JUnit test class whose name is the same as the JUnit class name.
    sourceSets.test.allJava.filter { it.path.contains("${picoPath}/src/test/java") }.forEach { file ->
        String junitClassName = file.name.replaceAll(".java", "")
        String testName = junitClassName.replaceAll("Test", "")
        tasks.create(name: "${junitClassName}", type: Test) {
            description "Run ${testName} tests."
            include "**/${name}.class"
        }
    }

    // Configure JUnit tests
    tasks.withType(Test) {
        group 'Verification'


        environment "external_checker_classpath", "${picoPath}/build/classes/java/main:${picoPath}/build/resources/main"
        maxHeapSize = "1024m"
        if (isJava8) {
            jvmArgs "-Xbootclasspath/p:${cfPath}/checker/dist/javac.jar".toString()
        } else {
            jvmArgs += compilerArgsForRunningCF
        }

        testLogging {
            // Always run the tests
            outputs.upToDateWhen { false }
            // The following prints out each time a test is passed.
            events "passed", "skipped", "failed", "standardOut", "standardError"

            // Show the found unexpected diagnostics and expected diagnostics not found.
            exceptionFormat "full"
            showExceptions true
            showCauses true
            showStackTraces true
            showStandardStreams true
        }

        // After each test, print a summary.
        afterSuite { desc, result ->
            if (desc.getClassName() != null) {
                long mils = result.getEndTime() - result.getStartTime()
                double seconds = mils / 1000.0

                println "Testsuite: ${desc.getClassName()}\n" +
                        "Tests run: ${result.testCount}, " +
                        "Failures: ${result.failedTestCount}, " +
                        "Skipped: ${result.skippedTestCount}, " +
                        "Time elapsed: ${seconds} sec\n"
            }
        }
    }
}

clean {
    delete "build",
        "testdata",
        "annotated",
        "default.jaif",
        fileTree("testinput") {include "**/*.class"}
}

